<resources>
    <string name="app_name">VimeoApp</string>
    <string name="txt_connection_fail">Connection failed</string>
    <string name="txt_check_connection">Check your internet connection</string>
    <string name="txt_close">Close</string>

    <string name="client_id">0b2ba23666e807bfbb755a6225073142c111ca05</string>
    <string name="client_secret">Pbx1h9pw+6EtTR8EugKCxYmYulMiqAYf0gApFfJYmywUmpGMloJq6jwcuxQUcTLxxa92DorvTzQG3u3HPDaMT9Jb9CuYIPhzwULS6D1jffcEoAqP9s+5zAxdiRhIm5hI</string>
    <string name="callback_url">antoshchuk://example.com/vimeoapp</string>
    <string name="authorization_address">https://api.vimeo.com/oauth/authorize</string>
    <string name="txt_videos">Videos</string>
    <string name="txt_likes">Likes</string>
    <string name="txt_following">Following</string>
    <string name="txt_followers">Followers</string>
    <string name="txt_groups">Groups</string>
    <string name="txt_channels">Channels</string>
    <string name="btn_prev">Previous</string>
    <string name="btn_next">Next</string>
    <string name="txt_duration">Duration</string>
    <string name="txt_plays">Plays</string>
    <string name="txt_empty" />
    <string name="txt_users">Users</string>
    <string name="txt_bitmap_load_fail">failed to load bitmap</string>
    <string name="txt_subscribers">Subscribers</string>
    <string name="txt_replies">Replies</string>
    <string name="client_info">MGIyYmEyMzY2NmU4MDdiZmJiNzU1YTYyMjUwNzMxNDJjMTExY2EwNTpQYngxaDlwdys2RXRUUjhFdWdLQ3hZbVl1bE1pcUFZZjBnQXBGZkpZbXl3VW1wR01sb0pxNmp3Y3V4UVVjVEx4eGE5MkRvcnZUelFHM3UzSFBEYU1UOUpiOUN1WUlQaHp3VUxTNkQxamZmY0VvQXFQOXMrNXpBeGRpUmhJbTVoSQ==</string>
    <string name="client_state">1</string>
    <string name="txt_auth_fail">Authorization fail</string>
    <string name="txt_auth_fail_msg">You rejected to connect VimeoApp to your account</string>
    <string name="access_token_address">" https://api.vimeo.com/oauth/access_token"</string>
    <string name="txt_owner">Owner</string>
    <string name="txt_no_videos">video list is empty</string>
    <string name="txt_no_likes">likes list is empty</string>
    <string name="txt_no_following">following list is empty</string>
    <string name="txt_no_followers">followers list is empty</string>
    <string name="txt_no_groups">groups list is empty</string>
    <string name="txt_no_channels">channels list is empty</string>
    <string name="txt_no_subscribers">subscribers list is empty</string>
    <string name="txt_no_members">member list is empty</string>
    <string name="txt_members">Members</string>
    <string name="txt_comments">Comments</string>
    <string name="txt_no_comments">comments list is empty</string>
    <string name="txt_search_type_title">Choose entity to search for:</string>
    <string name="txt_search_title">Search</string>
    <string name="txt_search_query_hint">enter name to search</string>
    <string name="btn_find">Find</string>
    <string name="txt_day_created_format">Created %d day(s) ago</string>
    <string name="txt_month_created_format">Created %d month(s) ago</string>
    <string name="txt_year_created_format">Created %d year(s) ago</string>
    <string name="txt_enter_search_name">enter name to search</string>
    <string name="txt_choose_search_type">choose entity to search for</string>
    <string name="txt_search_result">Search result</string>
    <string name="txt_logout_alert_title">Logout</string>
    <string name="txt_logout_alert_msg">Are you sure you want to logout?</string>
    <string name="txt_logout_confirm">Logout</string>
    <string name="txt_logout_cancel">Cancel</string>

    <string-array name="navigation_names">
        <item>My profile</item>
        <item>Search</item>
        <item>Logout</item>
    </string-array>

</resources>
